1.2.2 2007-12-29
== ChangeLog ==
 * live with wrong system time: allow caching files with mtime in further
 * bug fix for compatibility with Zend Optimizer and other non-cachable
 * #59: Maximum execution time of 60 seconds exceeded
 * #102: segv when var cacher is too small
 * #55: segv php tokenizer on certain special situation

1.2.1 2007-07-01
== Ini Settings Changes ==
 * new: xcache.admin.enable_auth = On

== ChangeLog ==
 * #86: remove/edit variable in admin page
 * fixed #109: fast inc/dec was trying to break ro protection
 * fixed #101, #105: Fixed compatibility issue for apache 1.x
 * fixed #94: Garbage collector disabled when xcache.cacher set to off
 * fixed #92: Zend Optimizer compatibility issue
 * fixed #77: hits/misses was not updated
 * fixed #59: pass by reference for internal function was broken
 * fixed #56: xcache_set segfaults when xcache.var_size=0

========
1.2.0 2006-12-10
Ini Settings Changes
========
 * new: xcache.stat = On
 * new: xcache.coverager =  Off
 * chg: xcache.coveragedump_directory default to ""
 * del: xcache.coveragedumper = Off

New APIs
========
 * array xcache_coverager_decode(string data)
 * void  xcache_coverager_start([bool clean = true])
 * void  xcache_coverager_stop([bool clean = false])
 * array xcache_coverager_get([bool clean = false])

ChangeLog
========
 * [290] [291] [292] build with the m4 on solaris
 * [283] removed zend_append_version_info. not needed after [282] 
 * [282] fix possible alloca() scope problem in lock 
 * [281] keep config.nice on make xcachesvnclean 
 * [279] fixed #48, was leaking info when cacher is not enabled by size 
 * [280] [278] trunk: fix coredump on shutdown when loaded as "extension" and after "suhosin" or "zend optimizer". thanks to Alex, Cristian and Esser 
 * [271] fix auto detection of php-cli/php-cgi for test 
 * [270] make [269] pass test cases 
 * [269] do not destruct shallow copied tmp_auto_globals. also improve copying of other hash tables